# ImageCompressor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh
compressor/: CMakeLists.txt  kernel.cl
compressor/include/: image.hpp  image_algorithms.hpp  seam.hpp
compressor/include/BMP/: bmp_color.hpp  bmp_image.hpp
compressor/src/: image.tpp  image_algorithms.cpp  main.cpp  seam.cpp
compressor/src/BMP/: bmp_color.cpp  bmp_image.cpp
install/: Image_Resizer.desktop
tests/: CMakeLists.txt  test_execution.cpp  test_image_container.cpp  test_kernels.cpp  test_utils.cpp
ui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
ui/include/: execution.hpp  image_adapter.hpp  image_container.hpp  saver.hpp
ui/src/: execution.cpp  image_adapter.cpp  image_container.cpp  saver.cpp
